--- a/templates/base.html
+++ b/templates/base.html
@@ -22,18 +22,31 @@
 </head>
 <body>
     <header>
-        <nav id="skinny-nav">
+        <div id="sidenav-overlay" class="d-none"></div>
+        <!-- Sidenav -->
+        <nav id="sidenav">
             <div id="burger-menu">
                 <a href="#"><i aria-hidden="true" class="fas fa-bars"></i></a>
             </div>
-            <div class="skinny-nav-profile d-none">
+            <div class="sidenav-profile d-none">
                 <img src="{% static 'img/default_profile_nav.jpg' %}" class="img-fluid rounded-circle my-3 ml-2" width="50" height="50" alt="Profile Image">
                 <p>Username</p>
             </div>
-            <ul id="skinny-nav-list">
+            <ul id="sidenav-list">
                 <li><a href="#"><i class="fa fa-chart-line"></i><p class="d-none">Student Progress</p></a></li>
             </ul>
         </nav>
+        <!-- /.Sidenav -->
+
+        <div id="top-bar" class="row">
+            <div id="top-bar-brand" class="col-2">The Hub</div>
+            <div id="top-bar-search" class="offset-7 col-3">
+                <form class="row">
+                    <input type="text" name="q" placeholder="Search" class="form-control col-10" required />
+                    <button type="submit" class="btn branded-btn col-2"><i class="fas fa-search"></i></button>
+                </form>
+            </div>
+        </div>
     </header>
 
     <!-- Scripts -->
