--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,6 @@
+@import url("../fonts/Montserrat-Regular.ttf");
+/* @import url("../fonts/Montserrat-Light.ttf"); */
+
 /****** CI branding ******/
 :root {
   /* p for primary, s for secondary, t for tertiary */
@@ -17,6 +20,10 @@
 }
 
 /*** General styles ***/
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 p {
   color: #445261;
   font-size: 12px;
@@ -140,14 +147,17 @@ p {
 
 /*** Page top section ***/
 #top-bar {
-  height: 60px;
-  padding: 10px;
   width: calc(100% - 60px);
   margin-left: auto;
   background-color: #8798AD;
 }
 
-#top-bar-search {
-  padding-right: 50px;
+#top-bar-brand {
+  font-weight: 300;
+  letter-spacing: 1.2px;
+  font-size: 2.5rem;
+  color: #fff;
+  padding: 0 10px;
+  text-shadow: #4a4a4f 2px 2px 2px;
 }
 /*** /.Page top section ***/
