--- a/templates/base.html
+++ b/templates/base.html
@@ -38,14 +38,12 @@
         </nav>
         <!-- /.Sidenav -->
 
-        <div id="top-bar" class="row">
-            <div id="top-bar-brand" class="col-2">The Hub</div>
-            <div id="top-bar-search" class="offset-7 col-3">
-                <form class="row">
-                    <input type="text" name="q" placeholder="Search" class="form-control col-10" required />
-                    <button type="submit" class="btn branded-btn col-2"><i class="fas fa-search"></i></button>
-                </form>
-            </div>
+        <div id="top-bar" class="navbar">
+            <div id="top-bar-brand" class="navbar-brand">The Hub</div>
+             <form id="top-bar-search" class="form-inline">
+                <input type="text" name="q" placeholder="Search" class="form-control" required />
+                <button type="submit" class="btn branded-btn"><i class="fas fa-search"></i></button>
+            </form>
         </div>
     </header>
 
