--- a/static/css/main.css
+++ b/static/css/main.css
@@ -40,8 +40,6 @@ p {
 
 /*** Sidenav ***/
 #burger-menu {
-  left: 0;
-  top: 0;
   height: 60px;
   width: 70px;
   font-size: 1.5rem;
@@ -161,3 +159,19 @@ p {
   text-shadow: #4a4a4f 2px 2px 2px;
 }
 /*** /.Page top section ***/
+
+/*** Media Queries ***/
+@media screen and (max-width: 992px) {
+  #burger-menu {
+    width: 45px;
+  }
+
+  #sidenav-list > li > a {
+    padding: 10px 15px;
+    font-size: 1.5rem;
+  }
+
+  #top-bar {
+    width: calc(100% - 40px);
+  }
+}
