--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,40 +1,17 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
-    {% endblock %}
-  </head>
-  <body>
-    {% block body %}
+{% extends "base.html" %}
+{% load static %}
+{% block injected_css %}
+<link rel="stylesheet" href="{% static 'css/account/account_main.css' %}" />
+{% endblock %}
 
-    {% if messages %}
-    <div>
-      <strong>Messages:</strong>
-      <ul>
-        {% for message in messages %}
-        <li>{{message}}</li>
-        {% endfor %}
-      </ul>
+{% block main_content %}
+<section class="container mt-5 no-floating-footer">
+    <div class="col-12 col-lg-6">
+        {% block auth_content %}
+        {% endblock %}
     </div>
-    {% endif %}
-
-    <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-      </ul>
+    <div class="d-none d-lg-block col-6">
+        <img src="" alt="" />
     </div>
-    {% block content %}
-    {% endblock %}
-    {% endblock %}
-    {% block extra_body %}
-    {% endblock %}
-  </body>
-</html>
+</section>
+{% endblock %}
