Minor layout alterations for Base and AllAuth Base templates

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main_content %}
-<section class="container mt-5 no-floating-footer">
+<section class="row mt-5">
     <div class="col-12 col-lg-6">
         {% block auth_content %}
         {% endblock %}
