--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="container">
         {% block main_content %}
         {% endblock %}
     </main>
