--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -5,13 +5,15 @@
 {% endblock %}
 
 {% block main_content %}
-<section class="row mt-5">
-    <div class="col-12 col-lg-6">
-        {% block auth_content %}
-        {% endblock %}
-    </div>
-    <div class="d-none d-lg-block col-6">
-        <img src="" alt="" />
+<section class="container-fluid px-0">
+    <div class="row no-gutters">
+        <div class="col-12 col-lg-6">
+            {% block auth_content %}
+            {% endblock %}
+        </div>
+        <div class="d-none d-lg-block col-6 px-0">
+            <img src="{% static 'img/login_image.jpg' %}" class="img-fluid" alt="Login Image" />
+        </div>
     </div>
 </section>
 {% endblock %}
