--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -7,9 +7,11 @@
 {% block main_content %}
 <section class="container-fluid px-0">
     <div class="row no-gutters">
-        <div class="col-12 col-lg-6">
-            {% block auth_content %}
-            {% endblock %}
+        <div class="col-12 col-lg-6 responsive-bg no-floating-footer">
+            <div class="auth-overlay">
+                {% block auth_content %}
+                {% endblock %}
+            </div>
         </div>
         <div class="d-none d-lg-block col-6 px-0">
             <img src="{% static 'img/login_image.jpg' %}" class="img-fluid" alt="Login Image" />
