--- a/templates/base.html
+++ b/templates/base.html
@@ -24,17 +24,24 @@
     {% if user.is_authenticated %}
     <header>
         <div id="sidenav-overlay" class="d-none"></div>
+        <div id="burger-menu">
+            <a href="#"><i aria-hidden="true" class="fas fa-bars"></i></a>
+        </div>
         <!-- Sidenav -->
         <nav id="sidenav">
-            <div id="burger-menu">
+            <!-- <div id="burger-menu">
                 <a href="#"><i aria-hidden="true" class="fas fa-bars"></i></a>
-            </div>
+            </div> -->
             <div class="sidenav-profile d-none">
                 <img src="{% static 'img/default_profile_nav.jpg' %}" class="img-fluid rounded-circle my-3 ml-2" width="50" height="50" alt="Profile Image">
                 <p>Username</p>
             </div>
             <ul id="sidenav-list">
                 <li><a href="#"><i class="fa fa-chart-line"></i><p class="d-none">Student Progress</p></a></li>
+                {% if user.is_superuser %}
+                <li><a href="#"><i class="fas fa-users-cog"></i><p class="d-none">Admin Area</p></a></li>
+                {% endif %}
+                <li><a href="#"><i class="fas fa-sign-out-alt"></i><p class="d-none">Logout</p></a></li>
             </ul>
         </nav>
         <!-- /.Sidenav -->
@@ -57,7 +64,7 @@
     <!-- Scripts -->
     <script src="{% static 'lib/jquery/jquery-3.6.0.min.js' %}"></script>
     <script src="{% static 'lib/bootstrap4/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/skinnynav.js' %}"></script>
+    <script src="{% static 'js/sidenav.js' %}"></script>
     <!-- Injected extra scripts -->
     {% block injected_js %}
     {% endblock %}
