--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,17 +5,19 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block auth_content %}
-<h1>{% trans "Sign Out" %}</h1>
+<div id="logout-page" class="p-5">
+  <h1 class="display-4">Logout</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+  <p>Are you sure you want to sign out?</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
+  <form class="mt-5" method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+    {% endif %}
+    <button type="submit" class="btn branded-btn">Logout</button>
+  </form>
+</div>
 
 
 {% endblock %}
