Shifted Navbar profile section down from under the burger menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         </div>
         <!-- Sidenav -->
         <nav id="sidenav">
-            <div class="sidenav-profile d-none">
+            <div class="sidenav-profile mt-5 d-none">
                 <img src="{% static 'img/default_profile_nav.jpg' %}" class="img-fluid rounded-circle my-3 ml-2" width="50" height="50" alt="Profile Image">
                 <p>Username</p>
             </div>
