Added page titles to Home, Login and Logout

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     {% block meta %}
     {% endblock %}
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>The Hub | {% block title %}{% endblock %}</title>
 
     <!-- Vendor libraries -->
     <link rel="stylesheet" href="{% static 'lib/bootstrap4/css/bootstrap.min.css' %}" />
