--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block title %}Logout{% endblock %}
 
 {% block auth_content %}
 <div id="logout-page" class="p-5">
