--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,5 +2,13 @@
 {% load static %}
 {% block title %}Home{% endblock %}
 
-{% block content %}
+{% block main_content %}
+<section>
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 class="display-5">Welcome, Username</h1>
+            <h3 class="display-5">What do you require?</h3>
+        </div>
+    </div>
+</section>
 {% endblock %}
