Moved accounts CSS file into main CSS folder

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block injected_css %}
-<link rel="stylesheet" href="{% static 'css/account/account_main.css' %}" />
+<link rel="stylesheet" href="{% static 'css/accounts.css' %}" />
 {% endblock %}
 
 {% block main_content %}
