--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 <section>
     <div class="row">
         <div class="col-12 text-center">
-            <h1 class="display-5">Welcome, Username</h1>
+            <h1 class="display-5">Welcome, {{ user.first_name }}</h1>
             <h3 class="display-5">What do you require?</h3>
         </div>
     </div>
