--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Home{% endblock %}
+{% block injected_css %}<link rel="stylesheet" href="{% static 'css/homepage.css' %}" />{% endblock %}
 
 {% block main_content %}
 <section>
     <div class="row">
         <div class="col-12 text-center">
-            <h1 class="display-5">Welcome, {{ user.first_name }}</h1>
-            <h3 class="display-5">What do you require?</h3>
+            <h1 id="home-header" class="mx-auto">Welcome, {{ user.first_name }}</h1>
+            <h3 id="home-subheader" class="mx-auto">What do you require?</h3>
         </div>
     </div>
 </section>
 {% endblock %}
+
+{% block injected_js %}<script src="{% static 'js/homepage.js' %}"></script>{% endblock %}
