Added general styling to the Main tag

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,6 +33,11 @@ body {
   color: var(--p-grey);
 }
 
+main {
+  background-color: var(--p-grey);
+  height: 100vh;
+}
+
 p {
   color: #445261;
   font-size: 12px;
