--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,17 +1,42 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}Home{% endblock %}
-{% block injected_css %}<link rel="stylesheet" href="{% static 'css/homepage.css' %}" />{% endblock %}
+
+{% block injected_css %}
+<link rel="stylesheet" href="{% static 'css/homepage.css' %}" />
+{% endblock %}
 
 {% block main_content %}
-<section>
+<section class="container">
+    <!-- Header section -->
     <div class="row">
         <div class="col-12 text-center">
             <h1 id="home-header" class="mx-auto">Welcome, {{ user.first_name }}</h1>
             <h3 id="home-subheader" class="mx-auto">What do you require?</h3>
         </div>
     </div>
+    <!-- Selection cards -->
+    <div class="row mt-5">
+        <div class="col-12 col-md-5 card home-card p-4 mb-5 text-center">
+            <p class="mb-5"><i class="fas fa-file-alt"></i></p>
+            <p>Document Lookup</p>
+        </div>
+        <div class="col-12 offset-md-2 col-md-5 card home-card p-4 mb-5 text-center">
+            <p class="mb-5"><i class="fas fa-file-word"></i></p>
+            <p>Document Creation</p>
+        </div>
+        <div class="col-12 col-md-5 card home-card p-4 mb-4 text-center">
+            <p class="mb-5"><i class="fas fa-user-alt"></i></p>
+            <p>Personal Area</p>
+        </div>
+        <div class="col-12 offset-md-2 col-md-5 card home-card p-4 mb-4 text-center">
+            <p class="mb-5"><i class="fas fa-calendar-alt"></i></p>
+            <p>Scheduling</p>
+        </div>
+    </div>
 </section>
 {% endblock %}
 
-{% block injected_js %}<script src="{% static 'js/homepage.js' %}"></script>{% endblock %}
+{% block injected_js %}
+<script src="{% static 'js/homepage.js' %}"></script>
+{% endblock %}
