--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main_content %}
-<section class="container-fluid px-0">
+<section class="container-fluid px-0 accounts-base-section">
     <div class="row no-gutters">
         <div class="col-12 col-lg-6 responsive-bg no-floating-footer">
             <div class="auth-overlay">
