--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,8 +38,8 @@ main {
   min-height: 100vh;
 }
 
-p {
-  color: #445261;
+p, #document-menu > li > a {
+  color: var(--p-navy);
   font-size: 12px;
   font-weight: 500;
   letter-spacing: 1.12px;
@@ -138,7 +138,8 @@ h4, h5, h6 {
 
 .sidenav-profile {
   height: 100px;
-  padding-left: 5px;
+  /* padding-left: 5px; */
+  padding-left: 15px;
   padding-top: 15px;
 }
 
@@ -159,23 +160,23 @@ h4, h5, h6 {
   z-index: 2;
 }
 
-#dashboard-menu, #mentoring-menu {
+#document-menu {
   list-style-type: none;
   background-color: rgba(0,0,0,0.08);
 }
 
-#dashboard-menu > li, #mentoring-menu > li {
-  padding: 5px 16px;
+#document-menu > li {
+  padding: 7px 30px;
   font-size: 0.9rem;
   color: var(--p-grey);
 }
 
-#dashboard-menu > li > a, #mentoring-menu > li > a {
-  font-size: 0.9rem;
+#document-menu > li > a {
+  /* font-size: 0.9rem; */
   color: var(--p-grey);
 }
 
-#dashboard-menu > li > a:hover, #mentoring-menu > li > a:hover {
+#document-menu > li > a:hover {
   color: var(--p-orange);
 }
 
@@ -245,6 +246,10 @@ h4, h5, h6 {
 
   #top-bar {
     width: calc(100% - 40px);
+  }
+
+  #document-menu > li {
+    padding: 5px 20px;
   }
 }
 
