--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,10 @@
         <!-- /.Sidenav -->
 
         <div id="top-bar" class="navbar">
-            <div id="top-bar-brand" class="navbar-brand">The Hub</div>
+            <div id="top-bar-brand" class="navbar-brand">
+                <img src="{% static 'img/ci_logo.png' %}" height="50" width="50" class="img-fluid" alt="Code Institute Logo" />
+                The Hub
+            </div>
              <form id="top-bar-search" class="form-inline">
                 <input type="text" name="q" placeholder="Search" class="form-control" required />
                 <button type="submit" class="btn branded-btn"><i class="fas fa-search"></i></button>
