--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,8 @@
             </ul>
         </nav>
         <!-- /.Sidenav -->
-
+        
+        <!-- Top bar -->
         <div id="top-bar" class="navbar">
             <div id="top-bar-brand" class="navbar-brand">
                 <img src="{% static 'img/ci_logo.png' %}" height="50" width="50" class="img-fluid" alt="Code Institute Logo" />
@@ -62,6 +63,7 @@
                 <button type="submit" class="btn branded-btn"><i class="fas fa-search"></i></button>
             </form>
         </div>
+        <!-- /.Top bar -->
     </header>
     {% endif %}
 
@@ -75,10 +77,12 @@
         <p>Please enable JavaScript in your browser or switch to a browser that allows scripts.</p>
     </noscript>
 
+    <!-- Main content injected via Jinja -->
     <main>
         {% block main_content %}
         {% endblock %}
     </main>
+    <!-- /.Main content -->
 
     <!-- Scripts -->
     <script src="{% static 'lib/jquery/jquery-3.6.0.min.js' %}"></script>
