Altered top-bar bg colour, the top-bar divider and finalised position of the logo svg

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                 <button type="submit" class="btn branded-btn"><i class="fas fa-search"></i></button>
             </form>
         </div>
-        <div id="top-bar-banner">
+        <div id="top-bar-divider">
             <!-- <p id="banner-date"></p> -->
         </div>
         <!-- /.Top bar -->
