--- a/static/css/main.css
+++ b/static/css/main.css
@@ -202,7 +202,7 @@ noscript > p {
 #top-bar {
   width: calc(100% - 60px);
   margin-left: auto;
-  background-color: var(--p-grey);
+  background-color: var(--table-grey);
 }
 
 #top-bar-brand {
@@ -214,15 +214,16 @@ noscript > p {
   text-shadow: #000 2px 2px 2px;
 }
 
-#top-bar-banner {
-  width: calc(100% - 60px);
-  height: 30px;
-  margin-left: auto;
-  background-color: var(--s-yellow);
+#top-bar-divider {
+  width: 100%;
+  height: 10px;
+  background-color: #fff;
 }
 
+/* Logo is an SVG in the HTML */
 .ci-logo {
   filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+  margin-bottom: 5px;
 }
 /*** /.Page top section ***/
 
